# notes_app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 488beed45453_create_users_and_notes_tables.py  6e2a5561f53f_create_notes_table.py  822f3e443217_create_user_table.py
src/notes_app/: __main__.py  database.py  notes.py  schemas.py
src/notes_app/api/: config.py  main.py  providers.py
src/notes_app/api/models/: note.py  user.py
src/notes_app/api/routers/: auth.py  note.py
src/notes_app/application/: exception.py
src/notes_app/application/dto/: note.py  user.py
src/notes_app/application/interfaces/: hasher.py  note_repo.py  notifier.py  token.py  txmanager.py  user_repo.py
src/notes_app/application/mappers/: note.py  user.py
src/notes_app/application/usecases/: auth.py  note.py  user.py
src/notes_app/domain/entities/: note.py  user.py
src/notes_app/infrastructure/: config.py
src/notes_app/infrastructure/auth/: config.py  jwt_token.py  jwt_token_service.py  passlib_hasher.py
src/notes_app/infrastructure/celery/: celery_app.py  config.py  tasks.py
src/notes_app/infrastructure/database/: config.py  main.py  tx_manager.py
src/notes_app/infrastructure/kafka/: config.py  notifier.py
src/notes_app/infrastructure/logging/: config.py  main.py
src/notes_app/infrastructure/notifier/: config.py  main.py  notifier.py
src/notes_app/infrastructure/task_queue/: config.py  main.py  providers.py  tasks.py
tests/: conftest.py
tests/fixtures/: app.py  auth.py  client.py  config.py  db.py  note.py  user.py
tests/integration/: conftest.py
tests/integration/api/: test_auth.py  test_note.py
tests/mocks/: hasher.py  notifier.py  token_service.py  tx_manager.py  user_repo.py
tests/unit/: conftest.py  fixtures.py
tests/unit/application/: test_user.py
(+11 files in other folders)
