[project]
name = "notes_app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "typer>=0.15.3",
    "uvicorn>=0.34.2",
]
[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"
