[project]
name = "notes_app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt==4.0.1",
    "datetime>=5.5",
    "fastapi>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "typer>=0.15.3",
    "uvicorn>=0.34.2",
]
[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"
[project.scripts]
notes_app = "notes_app.__main__:app"
