[project]
name = "notes_app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiokafka>=0.12.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "celery[asyncio]>=5.5.3",
    "datetime>=5.5",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary==2.9.11",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.40",
    "typer>=0.15.3",
    "uvicorn>=0.34.2",
]
[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit==4.3",
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.11.10",
]
[project.scripts]
notes_app = "notes_app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["alembic", "alembic.*"]
